log
Fri, Mar 21, 2025 11:15:00 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 11:26:08 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
90ff85d
Fri, Mar 21, 2025 11:27:50 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ac13e87
Fri, Mar 21, 2025 11:32:51 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ba051ed
Fri, Mar 21, 2025 11:35:15 AM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
b500fcd
Fri, Mar 21, 2025 11:42:53 AM: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  4|1
total_score: 50/70
14fb5a1
Fri, Mar 21, 2025  7:20:19 PM: 
 exercises.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:130:23: error: expected expression before 'List'
          if (get_size(List *)P == 0) {
                       ^~~~
exercises.c:130:30: error: expected ')' before 'P'
          if (get_size(List *)P == 0) {
                              ^
Compilation failed
be2dbff
Fri, Mar 21, 2025  7:21:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
24ce7c1
Fri, Mar 21, 2025  7:22:01 PM: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:6:0:
arraylist.c: In function 'create_list':
arraylist.c:15:34: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
   List* L = (List*)malloc(sizeof(List));
                                  ^~~~
arraylist.c:16:4: error: dereferencing pointer to incomplete type 'List {aka struct List}'
   L->current = 0;
    ^~
test.c: In function 'parentesisBalanceados':
test.c:253:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
 }
 ^
test.c:271:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:6:0:
arraylist.c: In function 'first':
arraylist.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:253:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:37:6: error: 'info_msg' defined but not used [-Werror=unused-function]
 void info_msg(char* msg){
      ^~~~~~~~
In file included from test.c:6:0:
arraylist.c:102:5: error: 'get_size' defined but not used [-Werror=unused-function]
 int get_size(List *L) {
     ^~~~~~~~
arraylist.c:89:7: error: 'popCurrent' defined but not used [-Werror=unused-function]
 void* popCurrent(List *L) {
       ^~~~~~~~~~
arraylist.c:80:7: error: 'popBack' defined but not used [-Werror=unused-function]
 void* popBack(List *L) {
       ^~~~~~~
arraylist.c:68:7: error: 'popFront' defined but not used [-Werror=unused-function]
 void* popFront(List *L) {
       ^~~~~~~~
arraylist.c:55:6: error: 'pushCurrent' defined but not used [-Werror=unused-function]
 void pushCurrent(List *L, void *dato) {
      ^~~~~~~~~~~
arraylist.c:37:6: error: 'pushFront' defined but not used [-Werror=unused-function]
 void pushFront(List *L, void *dato) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9ec9073
Fri, Mar 21, 2025  7:24:25 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
2ae8c1d
